# FloorPlanActiveLocalization

./: README.md
localization/: CMakeLists.txt
localization/include/localization/: markerViz.h
localization/msg/: landmark_msg.msg  particle_msg.msg  particle_struct.msg  robot_msg.msg  robot_struct.msg  topParticle.msg
localization/src/CPP/: markerViz.cpp  permissible_space.txt  slam2_decoupled.cpp
localization/src/CPP/doors_walls/: doors.txt  walls.txt
localization/src/python/: notification_python.py
localization_navigation/: CMakeLists.txt  package.xml
localization_navigation/config/: base_local_planner_params.yaml  costMapFromFloorPlan.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  fake_odom_msg.txt  global_costmap_params.yaml  local_costmap_params.yaml  path_planning.rviz  trajectory_planner.yaml
localization_navigation/include/localization_navigation/: currentCloud.h  targetClient.h
localization_navigation/launch/: localization.launch  path_planner.launch
localization_navigation/src/: currentCloud.cpp  targetClient.cpp  voiceCommands.cpp
sem_cloud/: CMakeLists.txt  package.xml
sem_cloud/include/: goal_rewards.txt
sem_cloud/include/sem_cloud/: exploration.h  semanticCloud.h  semanticCloudFix.h  synchronizer.h  voiceCommands.h  voiceCommands_new.h
sem_cloud/include/sem_cloud/sync_msg/: filterNode.h  zedCloud.h
sem_cloud/launch/: superpoint_semantic_slam.launch
sem_cloud/msg/: RGBDImages.msg  Semantic.msg  commandsafe.msg  imagepose.msg  nodes.msg  rgbdss.msg  topParticle.msg
sem_cloud/result/: 0.csv  1.csv  2.csv
sem_cloud/scripts/: testData.csv  testResultReverse.csv  testforcoordinates.py  testkld.csv  tests.py
sem_cloud/src/: exploration.cpp  odom_correction.cpp  semanticCloud.cpp  sync_image.cpp  voiceCommands_new.cpp
